--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="fr" > {# data-theme="light" #}
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="Réseaux sociaux public">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="{{asset ('build/images/logo-page.png')}}">
         {% block stylesheets %}
