--- a/templates/home/post.html.twig
+++ b/templates/home/post.html.twig
@@ -52,8 +52,8 @@
                     <div class="post-user-content">
                         <p>{{ post.content }}</p>
                         {% if post.picture %}
-                        <div class="postimage">
-                            <img src="{{ asset(post.picture) }}" >
+                        <div class="postimage"><img src="{{ asset(post.picture) }}" >
+                            
                         </div>
                     {% endif %}
                     </div>
